--- a/app/src/main/res/drawable/cr10dp.xml
+++ b/app/src/main/res/drawable/cr10dp.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid  android:color="@color/nav_fg"/>
+            <solid android:color="?colorSecondary"/>
         </shape>
     </item>
 </layer-list>
