--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -5,71 +5,80 @@
     android:layout_height="match_parent"
     tools:context=".CharacterActivity">
 
-    <ScrollView style="@style/Scroller">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <LinearLayout style="@style/ScrollerContainer">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/character_logo"
-                style="@style/CharacterImage"
-                android:src="@mipmap/tartalia_full"/>
+                android:layout_width="match_parent"
+                android:layout_height="320dp"
+                android:layout_marginVertical="24dp"
+                android:src="@mipmap/tartalia_full" />
 
-            <LinearLayout style="@style/CharacterSkillsContainer">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/cr15dp"
+                android:orientation="vertical"
+                android:padding="12dp">
+
+                <TextView style="@style/TextView.MatchParent22sp" />
 
                 <TextView
-                    android:id="@+id/character_name"
-                    style="@style/CharacterName"
-                    android:text="Тарталья" />
-
-                <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="@string/rarity" />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="@string/weapon" />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="Глаз Бога: " />
 
                 <TextView
-                    style="@style/CharacterSkills"
-                    android:text="Полное имя: " />
+                    style="@style/TextView.WrapContent16sp"
+                    android:text="@string/full_name" />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="@string/gender" />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="@string/birthday" />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="Регион: " />
 
                 <TextView
-                    style="@style/CharacterSkills"
+                    style="@style/TextView.WrapContent16sp"
                     android:text="Принадлежность: " />
-
-                <!--                <TextView-->
-                <!--                    android:id="@+id/character_skills"-->
-                <!--                    style="@style/CharacterSkills"-->
-                <!--                    android:text="Редкость: 5*\nОружие: Лук\nГлаз Бога: Гидро\nПолное имя: Аякс (настоящее имя)\nПол: Мужской\nДень рождения: 20 июля\nРегион: Снежная\nПринадлежность: Фатуи" />-->
 
             </LinearLayout>
 
             <LinearLayout
-                style="@style/CharacterDescription">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/cr15dp"
+                android:orientation="vertical"
+                android:padding="12dp">
 
                 <TextView
-                    style="@style/CharacterTitle"
-                    android:text="Описание" />
+                    style="@style/TextView.MatchParent22sp"
+                    android:text="@string/description" />
 
                 <TextView
-                    style="@style/CharacterContent"
-                    android:text="Познакомьтесь с Тартальей, непредсказуемым воином из Снежной! Не питайте иллюзий, что вы понимаете его подлинные намерения. Не забывайте, что за этой невинной внешностью скрывается безжалостное орудие для убийства." />
+                    style="@style/TextView.WrapContent16sp"
+                    android:layout_width="match_parent" />
 
             </LinearLayout>
 
