--- a/app/src/main/res/layout/model_characters.xml
+++ b/app/src/main/res/layout/model_characters.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Character">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginBottom="12dp"
+    android:background="@drawable/cr15dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/characters_model_logo"
-        style="@style/CharactersIcon"
-        android:src="@mipmap/tartalia"/>
+        android:layout_width="116dp"
+        android:layout_height="116dp"
+        android:layout_margin="12dp"
+        android:src="@mipmap/tartalia" />
 
-    <LinearLayout style="@style/CharactersContainerContent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="12dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/model_characters_title"
-            style="@style/CharactersText"
-            android:text="" />
+            style="@style/TextView.WrapContent16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,8 +30,7 @@
 
             <TextView
                 android:id="@+id/model_characters_star"
-                style="@style/CharactersStarRate"
-                android:text="" />
+                style="@style/TextView.WrapContent16sp" />
 
             <ImageView style="@style/Star" />
         </LinearLayout>
