--- a/app/src/main/res/layout/model_gacha.xml
+++ b/app/src/main/res/layout/model_gacha.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Gacha">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginBottom="12dp"
+    android:background="@drawable/cr15dp"
+    android:orientation="vertical"
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/model_gacha_icon"
-        style="@style/GachaImage"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:background="@color/transparent"
         android:src="@mipmap/eola" />
 
     <TextView
         android:id="@+id/model_gacha_title"
-        style="@style/GachaText"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        style="@style/TextView.WrapContent22sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/model_gacha_star"
-            style="@style/GachaTextSmall"
-            android:text="" />
+            style="@style/TextView.WrapContent16sp" />
 
         <TextView
-            style="@style/GachaTextStar"
-            android:text="@string/five" />
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
 
         <ImageView style="@style/Star" />
     </LinearLayout>
@@ -35,16 +41,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/model_gacha_star1"
-            style="@style/GachaTextSmall"
-            android:text="" />
+            style="@style/TextView.WrapContent16sp" />
 
         <TextView
-            style="@style/GachaTextStar"
-            android:text="@string/four" />
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
 
         <ImageView style="@style/Star" />
 
@@ -53,16 +59,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/model_gacha_star2"
-            style="@style/GachaTextSmall"
-            android:text="" />
+            style="@style/TextView.WrapContent16sp" />
 
         <TextView
-            style="@style/GachaTextStar"
-            android:text="@string/four" />
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
 
         <ImageView style="@style/Star" />
 
@@ -71,16 +77,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/model_gacha_star3"
-            style="@style/GachaTextSmall"
-            android:text="" />
+            style="@style/TextView.WrapContent16sp" />
 
         <TextView
-            style="@style/GachaTextStar"
-            android:text="@string/four" />
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
 
         <ImageView style="@style/Star" />
 
