--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="TextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:textColor</item>
+    </style>
+
+    <style name="TextView.MatchParent22sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextView.WrapContent22sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextView.MatchParent16sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextView.WrapContent16sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
     <style name="NavigationBarButton">
         <item name="android:layout_height">64dp</item>
         <item name="android:layout_width">64dp</item>
@@ -8,12 +40,12 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <style name="Scroller">
+    <style name="ScrollView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="ScrollerContainer" parent="Scroller">
+    <style name="ScrollerContainer" parent="ScrollView">
         <item name="android:orientation">vertical</item>
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
@@ -27,223 +59,18 @@
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:dropDownVerticalOffset">50dp</item>
-        <item name="android:background">@drawable/sorting_bg</item>
+        <item name="android:background">@drawable/cr10dp</item>
         <item name="android:entries">@array/sorting</item>
     </style>
 
-    <style name="Main">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">100dp</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="android:layout_marginRight">24dp</item>
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:layout_marginBottom">12dp</item>
-    </style>
 
-    <style name="MainImage">
-        <item name="android:layout_width">76dp</item>
-        <item name="android:layout_height">76dp</item>
-        <item name="android:layout_margin">12dp</item>
-    </style>
-
-    <style name="MainTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="fontFamily">@font/inter_val</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="Gacha">
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:padding">12dp</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="android:layout_marginRight">24dp</item>
-        <item name="android:layout_marginBottom">12dp</item>
-    </style>
 
     <style name="Star">
-<!--        <item name="android:layout_width">wrap_content</item>-->
         <item name="android:layout_height">23sp</item>
+        <item name="android:background">@color/transparent</item>
         <item name="android:layout_width">23sp</item>
         <item name="android:fillColor">?android:textColor</item>
         <item name="android:src">@drawable/star</item>
-    </style>
-
-    <style name="GachaImage">
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">150dp</item>
-    </style>
-
-    <style name="GachaText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="GachaTextSmall" parent="GachaText">
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="GachaTextStar" parent="GachaTextSmall">
-        <item name="android:layout_marginLeft">5dp</item>
-    </style>
-
-    <style name="Dictionary">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="android:layout_marginRight">24dp</item>
-        <item name="android:orientation">vertical</item>
-    </style>
-
-    <style name="DictionaryTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="DictionaryContent">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="DictionaryDescription">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/text_description</item>
-        <item name="android:textSize">15sp</item>
-    </style>
-
-    <style name="Character">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="android:layout_marginRight">24dp</item>
-        <item name="android:layout_marginBottom">12dp</item>
-    </style>
-
-    <style name="CharactersIcon">
-        <item name="android:layout_width">116dp</item>
-        <item name="android:layout_height">116dp</item>
-        <item name="android:layout_margin">12dp</item>
-    </style>
-
-    <style name="CharactersContainerContent">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_margin">12dp</item>
-    </style>
-
-    <style name="CharactersText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="CharactersStarRate">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="CharacterImage">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">320dp</item>
-        <item name="android:layout_marginTop">24dp</item>
-        <item name="android:layout_marginBottom">24dp</item>
-    </style>
-
-    <style name="CharacterSkillsContainer">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_marginBottom">12dp</item>
-        <item name="android:padding">12dp</item>
-    </style>
-
-    <style name="CharacterName">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">22sp</item>
-    </style>
-
-    <style name="CharacterSkills">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="CharacterDescription">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:padding">12dp</item>
-    </style>
-
-    <style name="CharacterTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">22sp</item>
-    </style>
-
-    <style name="CharacterContent">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="About">
-        <item name="android:background">@drawable/item_bg</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:padding">24dp</item>
-        <item name="android:layout_margin">12dp</item>
-    </style>
-
-    <style name="AboutTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">22sp</item>
-    </style>
-
-    <style name="AboutContent">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="AboutDescription">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/text_description</item>
-        <item name="android:fontFamily">@font/inter_val</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textSize">13sp</item>
     </style>
 
 </resources>
