--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,26 @@
 <resources>
 
-    <style name="Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+
+        <item name="android:textViewStyle">@style/TextView</item>
+
+        <item name="android:windowBackground">#1F2937</item>
+
+        <item name="colorSecondary">#4F46E5</item>
+        <item name="colorOnSecondary">#FFF</item>
+
+
+
+    </style>
+
+    <style name="AppTheme.Light">
         <!--    фуллскрин окно    -->
         <item name="android:windowFullscreen">true</item>
         <!--    фон окна    -->
         <item name="android:windowBackground">#E5E7EB</item>
         <!--    скругление элементов    -->
-        <item name="itemBackground">@drawable/item_bg</item>
+        <item name="itemBackground">@drawable/cr15dp</item>
         <!--    фон элемента    -->
         <item name="itemFillColor">#F9FAFB</item>
         <!--    фон кнопок    -->
@@ -19,31 +33,26 @@
         <item name="android:textColor">#000</item>
     </style>
 
-    <style name="Dark" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="AppTheme.Dark">
+        <item name="itemBackground">@drawable/cr15dp</item>
 
-        <!--    фуллскрин окно    -->
-        <item name="android:windowFullscreen">true</item>
-        <!--    фон окна    -->
-        <item name="android:windowBackground">#1F2937</item>
-        <!--    скругление элементов    -->
-        <item name="itemBackground">@drawable/item_bg</item>
-        <!--    фон элемента    -->
-        <item name="itemFillColor">#374151</item>
-        <!--    фон кнопок    -->
-        <item name="colorPrimary">#4F46E5</item>
-        <!--    текст на конпах    -->
-        <item name="colorOnPrimary">#D1D5DB</item>
-        <!--    системный навбар    -->
-        <item name="android:navigationBarColor">#1F2937</item>
-        <!--    текст    -->
         <item name="android:textColor">#FFF</item>
+        <item name="android:navigationBarColor">#1F2937</item>
+        <item name="colorOnPrimary">#D1D5DB</item>
+        <item name="colorPrimary">#4F46E5</item>
+        <item name="itemFillColor">#374151</item>
+        <item name="android:windowBackground">#1F2937</item>
+        <item name="android:background">?android:windowBackground</item>
 
-<!--        <item name="colorPrimaryDark">#4F46E5</item>-->
-<!--        <item name="colorButtonNormal">?colorPrimaryDark</item>-->
+
+
+        <!--Params-->
+        <item name="android:windowFullscreen">true</item>
 
     </style>
 
-    <style name="Launch">
+    <style name="AppTheme.Launch">
         <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:colorBackground">#1F2937</item>
     </style>
 </resources>
