--- a/app/src/main/res/drawable/bg_activity.xml
+++ b/app/src/main/res/drawable/bg_activity.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="10dp"/>
-            <solid  android:color="@color/nav_fg"/>
+            <solid android:color="?android:colorBackground"/>
         </shape>
     </item>
 </layer-list>
