--- a/app/src/main/res/drawable/cr10dp.xml
+++ b/app/src/main/res/drawable/cr10dp.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="15dp"/>
-            <solid android:color="@color/item_bg"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="?colorSecondary"/>
         </shape>
     </item>
 </layer-list>
