--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
-        android:drawable="@color/window_light_bg"/>
+        android:drawable="@color/window_light_bg"
+				android:width="108dp"
+        android:height="108dp"/>
 
     <item
         android:gravity="center"
         android:drawable="@drawable/ic_logo"
-        android:width="100dp"
-        android:height="100dp">
-
-    </item>
+        android:width="72dp"
+        android:height="72dp"/>
 
 </layer-list>
