--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/nav_bg"
+        android:background="?android:navigationBarColor"
         app:itemHorizontalTranslationEnabled="true"
-        app:itemIconTint="@color/nav_fg"
+        app:itemIconTint="?colorSecondary"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/navigation_bar" />
 </RelativeLayout>
