--- a/app/src/main/res/layout/model_gacha.xml
+++ b/app/src/main/res/layout/model_gacha.xml
@@ -1,33 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Gacha">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginBottom="12dp"
+    android:background="@drawable/cr15dp"
+    android:orientation="vertical"
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/model_gacha_icon"
-        style="@style/GachaImage"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
         android:src="@mipmap/eola" />
 
     <TextView
         android:id="@+id/model_gacha_title"
-        style="@style/GachaTitle"
-        android:text="@string/title" />
+        style="@style/TextView.WrapContent22sp" />
 
-    <TextView
-        android:id="@+id/model_gacha_star"
-        style="@style/GachaDescription"
-        android:text="@string/eola" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/model_gacha_star1"
-        style="@style/GachaDescription"
-        android:text="@string/sin_tsu" />
-    <TextView
-        android:id="@+id/model_gacha_star2"
-        style="@style/GachaDescription"
-        android:text="@string/bey_doy" />
-    <TextView
-        android:id="@+id/model_gacha_star3"
-        style="@style/GachaDescription"
-        android:text="@string/sin_yan" />
+        <TextView
+            android:id="@+id/model_gacha_star"
+            style="@style/TextView.WrapContent16sp" />
+
+        <TextView
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
+
+        <ImageView style="@style/Star" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/model_gacha_star1"
+            style="@style/TextView.WrapContent16sp" />
+
+        <TextView
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
+
+        <ImageView style="@style/Star" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/model_gacha_star2"
+            style="@style/TextView.WrapContent16sp" />
+
+        <TextView
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
+
+        <ImageView style="@style/Star" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/model_gacha_star3"
+            style="@style/TextView.WrapContent16sp" />
+
+        <TextView
+            style="@style/TextView.WrapContent16sp"
+            android:layout_marginLeft="5dp" />
+
+        <ImageView style="@style/Star" />
+
+    </LinearLayout>
 
 </LinearLayout>
