--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="TextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:textColor</item>
+    </style>
+
+    <style name="TextView.MatchParent22sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextView.WrapContent22sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextView.MatchParent16sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextView.WrapContent16sp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
     <style name="NavigationBarButton">
         <item name="android:layout_height">64dp</item>
         <item name="android:layout_width">64dp</item>
         <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <style name="Scroller">
+    <style name="ScrollView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="ScrollerContainer" parent="Scroller">
+    <style name="ScrollerContainer" parent="ScrollView">
         <item name="android:orientation">vertical</item>
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
     </style>
 
-    <style name="ScrollerContainerSpinner">
+    <style name="Spinner">
         <item name="android:layout_gravity">right</item>
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:layout_marginBottom">24dp</item>
         <item name="android:layout_marginTop">12dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:popupBackground">@color/item_bg</item>
+        <item name="android:textColor">?android:textColor</item>
         <item name="android:dropDownVerticalOffset">50dp</item>
-        <item name="android:background">@drawable/sorting_bg</item>
+        <item name="android:background">@drawable/cr10dp</item>
         <item name="android:entries">@array/sorting</item>
+    </style>
+
+    <style name="Star">
+        <item name="android:layout_height">23sp</item>
+        <item name="android:layout_width">23sp</item>
+        <item name="android:fillColor">?android:textColor</item>
+        <item name="android:src">@drawable/star</item>
     </style>
 
 </resources>
