--- a/app/src/main/res/layout/fragment_gacha.xml
+++ b/app/src/main/res/layout/fragment_gacha.xml
@@ -8,8 +8,18 @@
 
     <Spinner
         android:id="@+id/sort_gacha"
+        style="@style/Spinner"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="12dp"
         android:layout_marginRight="24dp"
-        style="@style/Spinner"/>
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/cr10dp"
+        android:dropDownVerticalOffset="50dp"
+        android:spinnerMode="dialog"
+        android:textAlignment="center"
+        android:textColor="?android:textColor" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gacha_recycler"
