--- a/app/src/main/res/layout/fragment_gacha.xml
+++ b/app/src/main/res/layout/fragment_gacha.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".fragments.GachaFragment">
 
-    <Spinner
-        android:id="@+id/sort_gacha"
-        style="@style/Spinner"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/cr10dp"
-        android:dropDownVerticalOffset="50dp"
-        android:spinnerMode="dialog"
-        android:textAlignment="center"
-        android:textColor="?android:textColor" />
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="?colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gacha_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-</LinearLayout>
+</RelativeLayout>
