--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,6 +59,8 @@
         <item name="android:dropDownVerticalOffset">50dp</item>
         <item name="android:background">@drawable/cr10dp</item>
         <item name="android:entries">@array/sort_by</item>
+        <item name="android:spinnerMode">dialog</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="Star">
