added swipe to refresh

--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -6,6 +6,15 @@
     android:orientation="vertical"
     tools:context=".fragments.CharactersFragment">
 
+    <TextView
+        android:id="@+id/error"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Не удалось найти ни одного персонажа"/>
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_centerInParent="true"
@@ -13,9 +22,18 @@
         android:layout_height="wrap_content"
         android:indeterminateTint="?colorPrimary" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/characters_recycler"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/characters_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
 </RelativeLayout>
