--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -19,7 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:indeterminateTint="?colorPrimary" />
+        android:indeterminateTint="?colorPrimary"
+        android:visibility="gone" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
