--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -5,167 +5,174 @@
     android:layout_height="match_parent"
     tools:context=".CharacterActivity">
 
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:id="@+id/layout"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/character_logo"
-                android:layout_width="match_parent"
-                android:layout_height="320dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginVertical="24dp"
-                android:src="@mipmap/tartalia_full" />
-
             <RelativeLayout
-                android:id="@+id/entry"
+                android:id="@+id/layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/character_logo"
-                android:layout_marginHorizontal="12dp"
-                android:background="@drawable/cr15dp"
-                android:padding="12dp">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/title"
-                    style="@style/TextView.MatchParent22sp"
-                    android:layout_alignParentTop="true" />
-
-                <TextView
-                    android:id="@+id/rarityText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/title"
-                    android:text="@string/rarity" />
-
-                <TextView
-                    android:id="@+id/rarity"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/title"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/rarityText" />
-
-                <TextView
-                    android:id="@+id/weaperonText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/rarityText"
-                    android:text="@string/weapon" />
-
-                <TextView
-                    android:id="@+id/weaperon"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/rarityText"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/weaperonText" />
-
-                <TextView
-                    android:id="@+id/eyeText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/weaperonText"
-                    android:text="@string/eye" />
-
-                <TextView
-                    android:id="@+id/eye"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/weaperonText"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/eyeText" />
-
-                <TextView
-                    android:id="@+id/fullnameText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/eyeText"
-                    android:text="@string/full_name" />
-
-                <TextView
-                    android:id="@+id/fullname"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/eyeText"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/fullnameText" />
-
-                <TextView
-                    android:id="@+id/sexText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/fullnameText"
-                    android:text="@string/gender" />
-
-                <TextView
-                    android:id="@+id/sex"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/fullnameText"
-                    android:layout_alignEnd="@+id/sexText"
-                    android:layout_marginLeft="5dp" />
-
-                <TextView
-                    android:id="@+id/birthdayText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/sexText"
-                    android:text="@string/birthday" />
-
-                <TextView
-                    android:id="@+id/birthday"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/sexText"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/birthdayText" />
-
-                <TextView
-                    android:id="@+id/regionText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/birthday"
-                    android:text="@string/region" />
-
-                <TextView
-                    android:id="@+id/region"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/birthday"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/regionText" />
-
-                <TextView
-                    android:id="@+id/belongingText"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/regionText"
-                    android:text="@string/belonging" />
-
-                <TextView
-                    android:id="@+id/belonging"
-                    style="@style/TextView.WrapContent16sp"
-                    android:layout_below="@id/regionText"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toEndOf="@+id/belongingText" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/entry"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/cr15dp"
-                android:padding="12dp">
-
-                <TextView
-                    android:id="@+id/destText"
-                    style="@style/TextView.MatchParent22sp"
-                    android:text="@string/description" />
-
-                <TextView
-                    android:id="@+id/dest"
-                    style="@style/TextView.WrapContent16sp"
+                <ImageView
+                    android:id="@+id/character_logo"
                     android:layout_width="match_parent"
-                    android:layout_below="@id/destText" />
+                    android:layout_height="320dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginVertical="24dp"
+                    android:src="@mipmap/tartalia_full" />
+
+                <RelativeLayout
+                    android:id="@+id/entry"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/character_logo"
+                    android:layout_marginHorizontal="12dp"
+                    android:background="@drawable/cr15dp"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/title"
+                        style="@style/TextView.MatchParent22sp"
+                        android:layout_alignParentTop="true" />
+
+                    <TextView
+                        android:id="@+id/rarityText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/title"
+                        android:text="@string/rarity" />
+
+                    <TextView
+                        android:id="@+id/rarity"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/title"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/rarityText" />
+
+                    <TextView
+                        android:id="@+id/weaperonText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/rarityText"
+                        android:text="@string/weapon" />
+
+                    <TextView
+                        android:id="@+id/weaperon"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/rarityText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/weaperonText" />
+
+                    <TextView
+                        android:id="@+id/eyeText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/weaperonText"
+                        android:text="@string/eye" />
+
+                    <TextView
+                        android:id="@+id/eye"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/weaperonText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/eyeText" />
+
+                    <TextView
+                        android:id="@+id/fullnameText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/eyeText"
+                        android:text="@string/full_name" />
+
+                    <TextView
+                        android:id="@+id/fullname"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/eyeText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/fullnameText" />
+
+                    <TextView
+                        android:id="@+id/sexText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/fullnameText"
+                        android:text="@string/gender" />
+
+                    <TextView
+                        android:id="@+id/sex"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/fullnameText"
+                        android:layout_toEndOf="@+id/sexText"
+                        android:layout_marginLeft="5dp" />
+
+                    <TextView
+                        android:id="@+id/birthdayText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/sexText"
+                        android:text="@string/birthday" />
+
+                    <TextView
+                        android:id="@+id/birthday"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/sexText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/birthdayText" />
+
+                    <TextView
+                        android:id="@+id/regionText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/birthday"
+                        android:text="@string/region" />
+
+                    <TextView
+                        android:id="@+id/region"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/birthday"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/regionText" />
+
+                    <TextView
+                        android:id="@+id/belongingText"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/regionText"
+                        android:text="@string/belonging" />
+
+                    <TextView
+                        android:id="@+id/belonging"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_below="@id/regionText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/belongingText" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/entry"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/cr15dp"
+                    android:padding="12dp">
+
+                    <TextView
+                        android:id="@+id/destText"
+                        style="@style/TextView.MatchParent22sp"
+                        android:text="@string/description" />
+
+                    <TextView
+                        android:id="@+id/dest"
+                        style="@style/TextView.WrapContent16sp"
+                        android:layout_width="match_parent"
+                        android:layout_below="@id/destText" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
-        </RelativeLayout>
+        </ScrollView>
 
-    </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
