--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,7 @@
 	<color name="window_dark_bg">#1F2937</color>
 	<color name="nav_bg">#F3F4F6</color>
 	<color name="item_bg">#F9FAFB</color>
-	<color name="logo_color">#4F46E5</color>
-	<color name="nav_fg">#4F46E5</color>
-	<color name="sort_btn_bg">#4F46E5</color>
+	<color name="primary">#4F46E5</color>
 
 	<color name="text">#000</color>
 	<color name="text_description">#6B7280</color>
