--- a/app/src/main/res/layout/fragment_wishes.xml
+++ b/app/src/main/res/layout/fragment_wishes.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.GachaFragment">
+    android:id="@+id/wishes"
+    tools:context=".fragments.WishesFragment">
 
     <TextView
         android:id="@+id/error"
