--- a/app/src/main/res/menu/navigation_bar.xml
+++ b/app/src/main/res/menu/navigation_bar.xml
@@ -2,28 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<item
-		android:id="@+id/main"
+		android:id="@+id/nav_main"
 		android:icon="@drawable/ic_main"
-		android:title="Главная" />
+		android:title="@string/main" />
 
 	<item
-		android:id="@+id/characters"
+		android:id="@+id/nav_characters"
 		android:icon="@drawable/ic_characters"
-		android:title="Персонажи" />
+		android:title="@string/characters" />
 
 	<item
-		android:id="@+id/dictionary"
+		android:id="@+id/nav_dictionary"
 		android:icon="@drawable/ic_dictionary"
-		android:title="Хиличурлский" />
+		android:title="@string/dictionary" />
 
 	<item
-		android:id="@+id/gacha"
-		android:icon="@drawable/ic_gacha"
-		android:title="Молитвы" />
+		android:id="@+id/nav_wishes"
+		android:icon="@drawable/ic_wishes"
+		android:title="@string/wishes" />
 
 	<item
-		android:id="@+id/about"
-		android:icon="@drawable/ic_about"
-		android:title="О проекте" />
+		android:id="@+id/nav_settings"
+		android:icon="@drawable/ic_settings"
+		android:title="@string/settings" />
 
 </menu>
